# vechicle_price_predictor

./: .gitignore  exceptions.py  logger.py  main.py  pyproject.toml
src/config/: config.yaml
src/database/: mongodb_connection.py  mongodb_operations.py
src/etl_components/: extract_csv.py  load_to_mongo.py  transform_clean.py
src/utils/: utils.py
